--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@xyflow/react": "^12.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
