--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.5",
+    "puppeteer": "^24.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
