--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postgres": "^3.4.5",
     "puppeteer": "^24.3.0",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.1",
