--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.7.15",
     "postgres": "^3.4.5",
     "puppeteer": "^24.3.0",
     "react": "^19.0.0",
