--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cron-parser": "^5.0.4",
+    "cronstrue": "^2.56.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
