feat: update .env.example with new environment variables for development mode and API secret

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ AUTH_GOOGLE_SECRET=
 # GitHub OAuth
 AUTH_GITHUB_ID=
 AUTH_GITHUB_SECRET=
+
+NEXT_PUBLIC_DEV_MODE= # boolean value: true | false
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+API_SECRET= # a combination of random characters ex. lak23jlks334laf9u32
