--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cron-parser": "^5.0.4",
     "cronstrue": "^2.56.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
