feat: add ENCRYPTION_KEY to .env.example for user API key encryption

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ NEXT_PUBLIC_DEV_MODE= # boolean value: true | false
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 API_SECRET= # a combination of random characters ex. lak23jlks334laf9u32
+
+ENCRYPTION_KEY= # to encrypt user api keys
