--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
+    "ollama": "^0.5.14",
     "postgres": "^3.4.5",
     "puppeteer": "^24.3.0",
     "react": "^19.0.0",
