--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "cronstrue": "^2.56.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "lucide-react": "^0.471.0",
+    "lucide-react": "^0.479.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -45,6 +45,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
