feat: update .env.example with Stripe API keys and GROQ API configuration

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,15 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 API_SECRET= # a combination of random characters ex. lak23jlks334laf9u32
 
 ENCRYPTION_KEY= # to encrypt user api keys
+
+GROQ_API=
+
+#stripe
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+
+STRIPE_SMALL_PACK_PRICE_ID=
+STRIPE_MEDIUM_PACK_PRICE_ID=
+STRIPE_LARGE_PACK_PRICE_ID=
+
+STRIPE_WEBHOOK_SECRET=
