--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.479.0",
+    "motion": "^12.5.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -49,7 +50,7 @@
     "recharts": "^2.15.1",
     "sonner": "^1.7.1",
     "stripe": "^17.7.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
