--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cronstrue": "^2.56.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "motion": "^12.5.0",
     "next": "15.1.4",
